--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Hi there\! 
+The weather today is scheduled to be slightly cloudy, overcast, rain, thunderstorms, extreme weather, clear skies, and dust storms. You are advised to stay indoors, away from windows. If you are allergic to pollen, today is an obstacle cource for your respiration.
