--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-The weather today is scheduled to be slightly cloudy, overcast. Plan for rain, thunderstorms, extreme weather, clear skies, and dust storms. You are advised to stay indoors, away from windows. If you are allergic to pollen, today will be an obstacle course for your respiration.
+The weather today is scheduled to be slightly cloudy and overcast. Plan for rain, thunderstorms, extreme weather, clear skies, and dust storms. You are advised to stay indoors, away from windows. If you are allergic to pollen, today will be an obstacle course for your respiration.
